Hw1/css/style.css
body {
    font-family: Arial, sans-serif;
    font-size:20px;
    text-align: center;
}

header {
    background-color:rgb(21, 118, 209);
}

nav {
    background-color: rgb(21, 118, 209);
    text-align: center;
    padding-top: 10px;
    color: white;
    display: inline-block;
    width: 80%;
    text-decoration: none;
}

header img {
    width: 10%;
    top: 20px;
    position: relative;
}

nav a:visited, p a:visited {
    color: white;
}

nav a, p a {
    color: white;
}

main {
    background-color: rgb(82, 158, 194);
    font-size:30px;
    margin: 0px;
}

footer {
    background-color: rgb(240, 255, 248);
}

.grid {
    display: grid;
    grid-template-columns: 40% 40%;
    justify-content:center;
    row-gap: 20px;
    column-gap: 20px;
}

.flex {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.flex img {
    width: 25%;
}

.grid img {
    width: 100%;
}

li {
    display: inline-block;
    width: 200px;
    color: white;
}
h1 {
    text-align:center;
    font-family: 'Courier New', Courier, monospace;
    color:rgb(12, 15, 19);
    padding-bottom: 10px;
    margin-bottom: 0px;
}

p {
    line-height: 50px;
    margin-top: 0px;
    margin-bottom: 0px;
    padding: 5px;
}

